2008-06-15  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.cpp, src/forcefield.cpp,
	src/forcefields/*: Replace sprintf(_logbuf, ...) with
	snprintf(_logbuf, BUFF_SIZE). 

2008-06-14  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/chain.h, src/chain.cpp: Replace:
	1) malloc/free with new/delete
	2) new T[n] with std::vector (where possible)
	Original code still there as comments, can be removed once reviewed.

	* src/parsmarts.cpp: Replace malloc/free with new/delete.
	Replace realloc(array, size) with:
	  T *tmp = new T[size];
	  copy(array, array + old_size, tmp);
	  delete [] array;
	  array = tmp;


2005-06-14  Marcus D. Hanwell  <marcus@cryos.org>

	* src/formats/xtcformat.cpp: Some modifications to the xtc format to
	use C++ structures.

	* CMakeLists.txt, src/formats/CMakeLists.txt: Some build system
	updates to build format plugins as modules.

	* src/ops/loader.cpp: GCC 4.3 fix - cstdlib needed for free calls.

2008-06-14  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/atom.h, src/atom.cpp: Add OBAtom::Duplcate()
	which will copy everything except the internal index.

	* include/openbabel/generic.h, src/generic.cpp: Add
	OBUnitCell::FillUnitCell() method to create space-group-defined
	atoms. Uses OBAtom::Duplicate.

2008-06-13  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.cpp: Change GetGradient(..., int terms
	= ...) to GetGradient(..., int /*terms*/ = ...). (comiler warning:
	unused parameter).

	* src/forcefields/*.cpp: Change i->Compute<gradients>() to i->template
	Compute<gradients>().

	* include/openbabel/builder.h, src/builder.cpp: Make most functions 
	static.

	* src/mol.cpp: Use OBBuilder::GetNewBondVector() in AddHydrogens(). 

2005-06-13  Marcus D. Hanwell  <marcus@cryos.org>

	* src/formats/mdlformat.cpp: Use static_cast in the min function.

2008-06-13  Geoffrey Hutchison  <babel@geoffhutchison.net>
